--- a/bs-starter-template/package.json
+++ b/bs-starter-template/package.json
@@ -10,6 +10,8 @@
   "author": "Sana Tameem",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "bootstrap": "^5.3.3",
     "sass": "^1.77.6"
   }
 }
